feat: add path to job parameters
